feat(clang): Added unrecognized clang paths to the output status file. (Fixes IDETECT-1975)